# AI-OPERATIOS-PLATFORM

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1f1b1a16e416_add_agent_tables.py  627b590411f8_add_rag_tables.py  eff1e45a6764_add_chat_tables.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/core/: config.py  database.py  exceptions.py  logging.py  middleware.py  security.py
backend/app/models/: __init__.py  agent.py  base.py  chat.py  deep_learning.py  domain.py  evaluation.py  fix_jsonb.py  monitoring.py  preprocessing.py  rag.py  serving.py  training.py  validation.py  workflow.py
backend/app/repositories/: base.py  dataset.py  project.py  project_member.py  user.py
backend/app/schemas/: agents.py  auth.py  chat.py  common.py  dataset.py  deep_learning.py  evaluation.py  monitoring.py  preprocessing.py  project.py  rag.py  responses.py  serving.py  training.py  user.py  validation.py  workflows.py
backend/app/services/: auth.py  chat_service.py  dataset.py  dataset_parser.py  dataset_profiler.py  dl_service.py  evaluation_service.py  preprocessing_service.py  project.py  rag_service.py  serving_service.py  storage.py  training_service.py  user.py  validation_service.py
backend/app/workers/: agent_tasks.py  monitoring_tasks.py  (+1 more)
backend/dashboards/: ai_operations.json  system_overview.json
backend/data/: app.db  mlflow.db
backend/scripts/: ingest_docs.py  seed_datasets.py
backend/tests/: conftest.py
(+199 files in other folders)
